# video-editor-mvp

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py  models.py  render.py
apps/api/tests/: test_render.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: clip-list.tsx  video-dropzone.tsx
apps/web/lib/: api.ts  types.ts
storage/exports/: .gitkeep
storage/uploads/: .gitkeep
